static/css/main.css
body {
    margin: 0px;
    background-image: url('../images/mtmitchsnow.jpg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}

.table{
    background-color: white;
}

.table th, .table td { 
    border-top: none !important; 
    border-bottom: none !important; 
}

caption{
    margin:2.5px, 2.5px, 2.5px, 0px;
    background-color: white;
}

td, th {
    padding: 0.5rem;
    font-size: small;
    background-color: rgb(255, 255, 254);
}

td {
    text-align: left;
    word-break: keep-all;
    font-family: 'Outfit', sans-serif !important;
}

img {
    height: 5em;
}

.table_head_image {
    border-radius: 6px 6px 0px 0px;
}

.nameCap {
    font-weight: bold;
    font-variant: small-caps;
    text-align: center;
    font-size: 15px;
}

table.app {
    /* margin-left: 25px; */
    border-bottom: 2.5px solid #bb472a;
    border-left: 2.5px solid #bb472a;
    border-right: 2.5px solid #bb472a;
    /* border-radius: 0px 0px 3px 3px; */
}

table.app caption {
    border-top: 2.5px solid #bb472a;
    border-left: 2.5px solid #bb472a;
    border-right: 2.5px solid #bb472a;
}

table.app th {
    background-color: #bb472a;
    color: white;
}

table.app th, td { 
    font-family: "Inter",sans-serif ;
}

table.beech {
    border-bottom: 2.5px solid #00adef;
    border-left: 2.5px solid #00adef;
    border-right: 2.5px solid #00adef;
}

table.beech caption {
    border-top: 2.5px solid #00adef;
    border-left: 2.5px solid #00adef;
    border-right: 2.5px solid #00adef;
}

table.beech th {
    background-color: #00adef;
    color: white;
}

table.beech th, td {
    font-family: 'Poppins',sans-serif;
}

table.cataloochee{
    border-bottom: 2.5px solid #0076bf;
    border-left: 2.5px solid #0076bf;
    border-right: 2.5px solid #0076bf;
}

table.cataloochee caption{
    border-top: 2.5px solid #0076bf;
    border-left: 2.5px solid #0076bf;
    border-right: 2.5px solid #0076bf;
}

table.cataloochee th {
    background-color: #0076bf;
    color: white;
}

table.cataloochee th, td {
    font-family:'Poppins',sans-serif;
}

table.sugar {
    border-bottom: 2.5px solid #30b457;
    border-left: 2.5px solid #30b457;
    border-right: 2.5px solid #30b457;
}

table.sugar caption {
    border-top: 2.5px solid #30b457;
    border-left: 2.5px solid #30b457;
    border-right: 2.5px solid #30b457;
}

table.sugar th {
    background-color: #30b457;
    color: black;
}

table.sugar th, td {
    font-family: Arial,sans-serif;;
}

table.wolfridge {
    border-bottom: 2.5px solid #6e2306;
    border-left: 2.5px solid #6e2306;
    border-right: 2.5px solid #6e2306;
}

table.wolfridge caption {
    border-top: 2.5px solid #6e2306;
    border-left: 2.5px solid #6e2306;
    border-right: 2.5px solid #6e2306;
}

table.wolfridge th {
    background-color: #6e2306;
    color: #c2cdd3;
}

table.wolfridge th, td{
    font-family: Arial, Helvetica, sans-serif;
}

.table_head_image {
    caption-side: top !important;
    position: sticky;
    top: 0;
}

.topnav {
    background-color: #333;
    overflow: hidden;
    margin-top: 0px;
}
  
.topnav a {
    float: left;
    color: #f2f2f2;
    text-align: center;
    padding: 10px 16px;
    text-decoration: none;
    font-size: 18px;
}

.topnav a:hover {
    background-color: #ddd;
    color: black;
}

.titleupdate {
    margin-top: 2%;
    font-family: Georgia, serif;
    font-variant: small-caps;
}

.abouttext {
    color: rgb(0, 0, 0);
    padding: 5px;
    text-align: left;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
    grid-auto-rows: minmax(100px, auto);
} 

.abouttext section {
    grid-column: 2;
    grid-row: 1;
}

.abouttext article {
    padding: 5px;
    background-color: white;
    border-radius: 6px 6px 6px 6px;
}

.abouttext h1 {
    font-size: 36px;
    font-family: Georgia, serif;
    font-weight: bold;
    font-variant: small-caps;
}   

.abouttext p {
    font-family: Georgia, serif;
    font-size: 20px;
    margin-top: 20px;
    margin-bottom: 40px;
    text-align: center;
}

.oc-icon{
    height:1.5em;
    width:1.5em;
    padding:0px;
    margin: 0px;
}

.weather-icon{
    height:3.5em;
    width:3.5em;
    padding:0px;
    margin: 0px;
}

.weather-icon-div{
    background-color: #A1ACC7;
    border-radius:50%;
    width:50px;
    height:50px;
    }

